# PageIndex

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run_pageindex.py
examples/: cloud_demo.py  local_demo.py
pageindex/: __init__.py  agent.py  client.py  collection.py  config.py  errors.py  events.py
pageindex/backend/: cloud.py  local.py  protocol.py
pageindex/index/: legacy_utils.py  page_index.py  page_index_md.py  pipeline.py  utils.py
pageindex/parser/: markdown.py  pdf.py  protocol.py
pageindex/storage/: protocol.py  sqlite.py
shopify_demo/: csv_to_shopify.py  csv_to_shopify_ai.py
shopify_demo/input/: supplier_a_products.csv  supplier_b_products.csv
shopify_demo/output/: shopify_supplier_a_products.csv  shopify_supplier_b_products.csv
shopify_demo/output_ai/: shopify_ai_supplier_a_products.csv  shopify_ai_supplier_b_products.csv
shopify_service/: index.html  main.py  requirements.txt
tests/: test_agent.py  test_client.py  test_cloud_backend.py  test_collection.py  test_config.py  test_content_node.py  test_errors.py  test_events.py  test_local_backend.py  test_markdown_parser.py  test_pdf_parser.py  test_pipeline.py  test_sqlite_storage.py  test_storage_protocol.py
