[tool.poetry]
name = "pageindex"
version = "0.3.0.dev1"
description = "Python SDK for PageIndex"
readme = "README.md"
license = "MIT"
authors = ["Ray <ray@vectify.ai>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["rag", "document", "retrieval", "llm", "pageindex", "agents", "vector-database"]
packages = [{include = "pageindex"}]

[tool.poetry.dependencies]
python = ">=3.10"
litellm = ">=1.83.0"
pymupdf = ">=1.26.0"
PyPDF2 = ">=3.0.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"
openai-agents = ">=0.1.0"
requests = ">=2.28.0"
httpx = {extras = ["socks"], version = ">=0.28.1"}

[tool.poetry.urls]
Repository = "https://github.com/VectifyAI/PageIndex"
Homepage = "https://pageindex.ai"
Documentation = "https://docs.pageindex.ai"
Issues = "https://github.com/VectifyAI/PageIndex/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
